# bsomeip

./: .gitignore  .gitmodules  BUILD.bazel  MODULE.bazel  README.md  TODO
.github/prompts/: gcc-cpp-reflection.prompt.md  stdexec.prompt.md
bench/: bench_comm.cpp  bench_main.cpp  bench_vs_vsomeip.cpp
docs/: migration-guide.md
include/bsomeip/: core.hpp  runtime.hpp  wire.hpp
include/bsomeip/api/: application.hpp  proxy.hpp  skeleton.hpp
include/bsomeip/async/: execution.hpp
include/bsomeip/comm/: attribute.hpp  broadcast.hpp  rpc.hpp
include/bsomeip/compat/: vsomeip.hpp
include/bsomeip/config/: config.hpp
include/bsomeip/e2e/: crc.hpp  profile.hpp  protector.hpp
include/bsomeip/io/: buffer_pool.hpp  framer.hpp  socket_ops.hpp  uring_context.hpp  uring_scheduler.hpp
include/bsomeip/io/detail/: uring_syscall.hpp
include/bsomeip/platform/: byte_order.hpp
include/bsomeip/route/: dispatcher.hpp  manager.hpp  registry.hpp
include/bsomeip/sd/: discovery.hpp  entry.hpp  message.hpp  option.hpp
include/bsomeip/security/: enforcer.hpp  policy.hpp
include/bsomeip/wire/: annotations.hpp  codec.hpp  constants.hpp  header.hpp  message_type.hpp  return_code.hpp  tp.hpp  types.hpp
test/: api_test.cpp  compat_test.cpp  e2e_security_test.cpp  io_test.cpp  route_test.cpp  wire_test.cpp
toolchains/gcc/: BUILD.bazel  gcc_cc_toolchain_config.bzl
toolchains/gcc/wrappers/: gcc  resolve_gcc.sh
tools/: update_third_party.sh
