load("@rules_cc//cc:defs.bzl", "cc_toolchain")
load(":gcc_cc_toolchain_config.bzl", "gcc_cc_toolchain_config")

package(default_visibility = ["//visibility:public"])

# Toolchain filegroup: all files under the GCC install directory
filegroup(
    name = "gcc_all_files",
    srcs = glob(
        ["wrappers/**"],
    ),
)

filegroup(
    name = "empty",
    srcs = [],
)

# Toolchain config rule
gcc_cc_toolchain_config(
    name = "gcc_config",
)

# The cc_toolchain rule
cc_toolchain(
    name = "gcc_cc_toolchain",
    all_files = ":gcc_all_files",
    ar_files = ":gcc_all_files",
    as_files = ":gcc_all_files",
    compiler_files = ":gcc_all_files",
    dwp_files = ":empty",
    linker_files = ":gcc_all_files",
    objcopy_files = ":empty",
    strip_files = ":empty",
    toolchain_config = ":gcc_config",
)

# Register as a toolchain
toolchain(
    name = "gcc_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":gcc_cc_toolchain",
    toolchain_type = "@rules_cc//cc:toolchain_type",
)
